Closed Bug 662086 Opened 15 years ago Closed 15 years ago

jsval.h:466:5: warning: C++ style comments are not allowed in ISO C90

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla7

People

(Reporter: dholbert, Assigned: dholbert)

References

Details

(Whiteboard: [build_warning][fixed-in-tracemonkey])

Attachments

(1 file)

This changeset: http://hg.mozilla.org/mozilla-central/rev/14b1ffc1bf53 added some C++ style "//" comments to jsval.h, which gets included by .c files, and triggers this GCC warning: > jsval.h:466:5: warning: C++ style comments are not allowed in ISO C90 Fix attached.
Attachment #537380 - Flags: review?(mrbkap)
Comment on attachment 537380 [details] [diff] [review] trivial fix. (use /**/ comments instead) Can you reword the comment so it fits on one line? If not, the style in the JS engine for multi-line comments is: /* * Comment here... */
Attachment #537380 - Flags: review?(mrbkap) → review+
Converted to correct multi-line style & landed: http://hg.mozilla.org/tracemonkey/rev/49cfb12c2225
Whiteboard: [build_warning] → [build_warning][fixed-in-tracemonkey]
Target Milestone: --- → mozilla7
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: