Bug 662086: Convert recently-added comment in jsval.h to be C-style, to fix build warning. r=mrbkap DONTBUILD