js/src/jsval.h
@@ -463,8 +463,10 @@ BOOLEAN_TO_JSVAL_IMPL(JSBool b)
 {
     jsval_layout l;
 
-    // Happens if XPConnect hands out an illegal value (constructed from C++ through a PRBool, for
-    // instance).
+    /*
+     * Happens if XPConnect hands out an illegal value (constructed from C++ through a PRBool, for
+     * instance).
+     */
     JS_ASSERT(b == JS_TRUE || b == JS_FALSE);
     l.s.tag = JSVAL_TAG_BOOLEAN;
     l.s.payload.boo = b;
@@ -659,8 +661,10 @@ BOOLEAN_TO_JSVAL_IMPL(JSBool b)
 {
     jsval_layout l;
 
-    // Happens if XPConnect hands out an illegal value (constructed from C++ through a PRBool, for
-    // instance).
+    /*
+     * Happens if XPConnect hands out an illegal value (constructed from C++ through a PRBool, for
+     * instance).
+     */
     JS_ASSERT(b == JS_TRUE || b == JS_FALSE);
     l.asBits = ((uint64)(uint32)b) | JSVAL_SHIFTED_TAG_BOOLEAN;
     return l;
